Fix minor spacing issue.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -86,6 +86,9 @@ body {
     max-width: 240px;
     box-sizing: border-box;
 }
+.collections-row-artwork:first-child {
+    margin-left: 0;
+}
 .collections-row.small .collections-row-artwork {
     height: 140px;
     max-width: 180px;
